# vibe-kanban

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  local-build.sh  pnpm-lock.yaml
.cargo/: config.toml
.claude/commands/: address-reviews.md  rebase.md
.githooks/: pre-commit
.github/actions/cargo-checks-common-setup/: action.yml
.github/workflows/: pre-release.yml  remote-build-ghcr.yml  test.yml
crates/db/: Cargo.toml
crates/db/.sqlx/: query-042944307765b8ddab6a86ec12b26b1fcfd3f541af40cb3c8176a02abd91c48c.json  query-0d7e16d14938c795d98b9da42fa70f61b7db4937adc2475ed878cdf896a716fd.json  query-272d26fb51181544b24be309956fc0b52192818972aebaf13dae6a959674b9f3.json  query-3e21357b78955d63ec36591ed29442dc8d3ac33ab00646c3ca5377e12003590b.json  query-448946e3007aca00793dcaf36e5d12e242f3f8bd47643889c817bb59f6aaed78.json  query-53f7fa70079f8c9ff988222168263159e02500e49322384be3dc1b0dab4ac9fe.json  query-699c87615141ce554965360320617020354ebef6b0349ec369670b7a7dd52185.json  query-9104373b3a36aba91acf30fed766292df18b060173bca6fd63d58920f097d3ee.json  query-920b3143f5ecafdf0fb8170a2ef6de550b2cf66298de9dd9a2cf2240ce5c7c75.json  query-9db13c959c60e7319ead6657f1af6610fd9c56992e1ff5d166516ab513b15a1d.json  query-abfaa2287381a0e920414e1864fcdcaf90142ae33f6c5ead73da9d5612073643.json  query-ac6083855318b5ac77ffa61cde36079a8402c14282841f7fbade7a97b6650630.json  query-bdd631a0f9f7280b79b87efe17a7b2ab27f7198d6ee7b86db7c266a9f42d3f04.json  query-bf8f9ad2c50e53472bbbbe372f76c364c05a2b77181d19c2b60368e1174365ec.json
crates/db/migrations/: 20260318120000_add_idempotency_keys.sql
crates/db/src/models/: execution_process.rs  idempotency.rs  idempotency_tests.rs  merge.rs  mod.rs  pull_request.rs  requests.rs  scratch.rs  session.rs  workspace.rs
crates/executors/: Cargo.toml
crates/executors/src/executors/: claude.rs  codex.rs  cursor.rs
crates/executors/src/executors/acp/: harness.rs
crates/executors/src/executors/codex/: client.rs  jsonrpc.rs  normalize_logs.rs  slash_commands.rs
crates/git-host/src/: lib.rs
crates/git-host/src/azure/: mod.rs
crates/git-host/src/github/: cli.rs  mod.rs
crates/git/src/: lib.rs
crates/local-deployment/src/: container.rs
crates/mcp/: Cargo.toml
crates/mcp/src/task_server/: handler.rs  mod.rs  schema_sanitizer.rs
crates/mcp/src/task_server/tools/: context.rs  mod.rs  sessions.rs  task_attempts.rs  workspaces.rs
crates/remote/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/remote/src/: app.rs  config.rs
crates/remote/src/auth/: jwt.rs  mod.rs
crates/remote/src/routes/: mod.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs
crates/server/src/routes/: execution_processes.rs  frontend.rs  mod.rs  task_attempts.rs
crates/server/src/routes/sessions/: mod.rs
crates/server/src/routes/workspaces/: codex_setup.rs  core.rs  create.rs  cursor_setup.rs  execution.rs  gh_cli_setup.rs  mod.rs  pr.rs
crates/services/src/services/: container.rs  execution_process.rs  pr_monitor.rs  worktree_manager.rs
crates/worktree-manager/: Cargo.toml
crates/worktree-manager/src/: worktree_manager.rs
docs/: architecture.md  dioxus-frontend-migration.md  frontend-architecture.md  frontend-ui-library-refactor-audit.md  workspace-frontend-backend-communication.md
docs/integrations/: vibe-kanban-mcp-server.mdx
docs/workspaces/: changes.mdx  creating-workspaces.mdx
npx-cli/src/: cli.ts
scripts/: affected-crates.py  capture-vk-memory.sh  vibe-kanban-cleanup.sh  vibe-kanban-setup.sh  watch-vk-memory.sh
shared/: types.ts
shared/schemas/: codex.json  cursor_agent.json
user_docs/: architecture.md  browser-testing.mdx  docs.json  getting-started.mdx  index.mdx  issue-management.mdx  remote-access.mdx  responsible-disclosure.mdx  reviewing-code.mdx
user_docs/agents/: ccr.mdx
user_docs/cloud/: authentication.mdx  customisation.mdx  filtering.mdx  getting-started.mdx  index.mdx  issues.mdx  kanban-board.mdx  list-view.mdx  organizations.mdx  projects.mdx  team-members.mdx  troubleshooting.mdx
user_docs/configuration-customisation/: global-settings.mdx  keyboard-shortcuts.mdx
user_docs/integrations/: mcp-server-configuration.mdx
user_docs/self-hosting/: deploy-docker.mdx  local-development.mdx
user_docs/settings/: agent-configurations.mdx  creating-task-tags.mdx  general.mdx  index.mdx  mcp-servers.mdx  organization-settings.mdx  projects-repositories.mdx  remote-projects.mdx
user_docs/workspaces/: chat-interface.mdx  command-bar.mdx  git-operations.mdx  index.mdx  interface.mdx  managing-workspaces.mdx  multi-repo-sessions.mdx  repositories.mdx  sessions.mdx  slash-commands.mdx
