[package]
name = "remote"
version = "0.1.14"
edition = "2024"
publish = false

[[bin]]
name = "remote-generate-types"
path = "src/bin/generate_types.rs"

[features]
default = []
vk-billing = ["dep:billing"]

[dependencies]
# private crate for billing functionality
billing = { git = "ssh://git@github.com/BloopAI/vibe-kanban-private", branch = "main", package = "billing", optional = true }

anyhow = "1.0"
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.3", features = ["typed-header"] }
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots-no-provider", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
bytes = "1"
hyper = { version = "1", features = ["client", "server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tokio-yamux = "0.3.17"
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "postgres", "uuid", "chrono", "json", "macros", "migrate", "ipnetwork"] }
ipnetwork = "0.20"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = { version = "0.5", features = ["cors", "request-id", "trace", "fs", "validate-request", "compression-gzip", "compression-br"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-error = "0.2"
thiserror = "2.0.12"
ts-rs = { git = "https://github.com/xazukx/ts-rs.git", branch = "use-ts-enum", features = ["uuid-impl", "chrono-impl", "no-serde-warnings", "serde-json-impl"] }
api-types = { path = "../api-types" }
utils = { path = "../utils" }
uuid = { version = "1", features = ["serde", "v4"] }
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
rand = "0.9"
sha2 = "0.10"
hmac = "0.12"
subtle = "2.5"
hex = "0.4"
urlencoding = "2.1"
url = "2.5"
base64 = "0.22"
rmp-serde = "1.3"
aws-sdk-s3 = { version = "1.65", default-features = false, features = ["behavior-version-latest", "rt-tokio"] }
aws-credential-types = "1.2"
azure_core = "0.31"
azure_storage_blob = "0.8"
azure_identity = "0.31"
time = "0.3"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
tempfile = "3"
tar = "0.4"
flate2 = "1.0"


[workspace]
