[package]
name = "server"
version = "0.1.18"
edition = "2024"
default-run = "server"

[lints.clippy]
uninlined-format-args = "allow"

[dependencies]
api-types = { path = "../api-types" }
deployment = { path = "../deployment" }
executors = { path = "../executors" }
local-deployment = { path = "../local-deployment" }
utils = { path = "../utils" }
git = { path = "../git" }
git-host = { path = "../git-host" }
db = { path = "../db" }
services = { path = "../services" }
tokio = { workspace = true }
shlex = "1.3.0"
tokio-util = { version = "0.7", features = ["io"] }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls-aws-lc-rs", "sqlite", "sqlite-preupdate-hook", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
ts-rs = { workspace = true }
tower-http = { workspace = true }
schemars = { workspace = true }
sentry = { version = "0.41.0", default-features = false, features = ["anyhow", "backtrace", "panic", "debug-images", "reqwest"] }
reqwest = { workspace = true }
rustls = { workspace = true }
strip-ansi-escapes = "0.2.1"
thiserror = { workspace = true }
os_info = "3.12.0"
flate2 = "1.0"
futures-util = "0.3"
base64 = "0.22"
git2 = { workspace = true }
mime_guess = "2.0"
rust-embed = "8.2"
url = "2.5"
rand = { version = "0.8", features = ["std"] }
sha2 = "0.10"
regex = "1"
tokio-tungstenite = { version = "0.24", features = ["connect"] }

[build-dependencies]
dotenv = "0.15"

[features]
default = []
qa-mode = ["services/qa-mode", "executors/qa-mode"]
